finished polishing up the modify transaction ability; updated styling for edit button and debit toggle; added promises to updating/adding transactions and updating profile which fixed the spinner not showing; added spinner for loading on the delete transaction popover

--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -10,11 +10,24 @@
   background-color: #3498db;
   border-color: #3498db;
 }
+.transaction-type-toggle:not(.active):hover {
+  background-color: #2a7bb1;
+  border-color: #2a7bb1;
+}
 .transaction-type-toggle:not(:disabled):not(.disabled).active {
   background-color: #226897;
   border-color: #226897;
 }
-.transaction-type-toggle:not(.active):hover {
-  background-color: #2a7bb1;
-  border-color: #2a7bb1;
+
+.transaction-debit-toggle {
+  background-color: #17a2b8;
+  border-color: #17a2b8;
+}
+.transaction-debit-toggle:not(.active):hover {
+  background-color: #158fa1;
+  border-color: #158fa1;
+}
+.transaction-debit-toggle:not(:disabled):not(.disabled).active {
+  background-color: #127b8b;
+  border-color: #127b8b;
 }
