--- a/src/styles/Transaction.css
+++ b/src/styles/Transaction.css
@@ -2,21 +2,14 @@
   margin-bottom: 10px;
 }
 
-.row-credit {
-  background-color: rgb(157, 201, 157);
-}
-.row-debit {
-  background-color: rgb(201, 157, 157);
-}
-
 .trans-badge {
   cursor: pointer;
 }
 .trans-badge-modify {
-  background-color: #27ae60;
+  background-color: #17a2b8;
 }
 .trans-badge-modify:hover {
-  background-color: #2ecc71;
+  background-color: #1ecbe6;
 }
 .trans-badge-delete {
   background-color: #c0392b;
